# ChangeSlackStatusProject

./: .gitignore  Cargo.toml  README.MD  build.sh  event.json  template.yaml
lib/my_google_controller/: Cargo.toml
lib/my_google_controller/src/: google_auth.rs  google_calendar.rs  lib.rs
lib/my_slack_controller/: Cargo.toml
lib/my_slack_controller/src/: lib.rs  slack_general.rs  slack_profile.rs
src/: main.rs
