[package]
name = "ChangeSlackStatusProject"
version = "0.1.0"
authors = ["nekotouma0114"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "*"
simple-error = "*"
serde_derive = "*"
serde = { version = "*", features = ["derive"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"