[package]
name = "ChangeSlackStatusProject"
version = "0.1.0"
authors = ["nekotouma0114"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "*"
simple-error = "*"
serde_derive = "*"
serde = { version = "*", features = ["derive"] }
tokio = "0.2.19"

[dependencies.my_google_controller]
path = "./lib/my_google_controller"

[dependencies.my_slack_controller]
path = "./lib/my_slack_controller"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
