[package]
name = "my_slack_controller"
version = "0.1.0"
authors = ["nekotouma0114"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.10.4", default-features = false, features = ["rustls-tls","json"]}
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.51"